--- a/android/AdjustSdk.Maui.Android/AdjustSdk.Maui.Android.csproj
+++ b/android/AdjustSdk.Maui.Android/AdjustSdk.Maui.Android.csproj
@@ -1,9 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net6.0-android33.0</TargetFramework>
+    <TargetFramework>net7.0-android33.0</TargetFramework>
     <SupportedOSPlatformVersion>21</SupportedOSPlatformVersion>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <AndroidBoundInterfacesContainConstants>false</AndroidBoundInterfacesContainConstants>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
@@ -12,19 +13,7 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
-    <None Remove="Jars\adjust-android.jar" />
-    <None Remove="Jars\installreferrer-1.0.aar" />
-    <None Remove="Jars\" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedJar Include="Jars\adjust-android.jar" />
-  </ItemGroup>
-  <ItemGroup>
-    <LibraryProjectZip Include="Jars\installreferrer-1.0.aar">
-      <Pack></Pack>
-    </LibraryProjectZip>
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Jars\" />
+    <EmbeddedJar Include="Jars\adjust-android.jar"/>
+    <AndroidLibrary Include="Jars\installreferrer-1.0.aar"/>
   </ItemGroup>
 </Project>
